# Salsa

./: LICENSE  README  Salsa.cabal  boring
Driver/: Driver.cs  Driver.proj  Embed.hs  README  build.bat
Foreign/: Salsa.hs
Foreign/Salsa/: Binding.hs  CLR.hs  CLRHost.hs  Common.hs  Core.hs  Driver.hs  Resolver.hs  TypePrelude.hs
Generator/: Array.hs  Generator.cs  Generator.csproj  README  README.txt  Set.cs
Salsa/: LICENSE.txt  Salsa.cabal  Salsa.hs
Salsa/Driver/: Driver.cs  Embed.hs  README.txt
Salsa/Salsa/: Binding.hs  CLR.hs  CLRHost.hs  Common.hs  Core.hs  Driver.hs  Resolver.hs  TypePrelude.hs
Samples/Conway/: Conway.hs  Conway.imports  Conway.proj  Conway.xaml  build.bat
Samples/Hello/: Hello.hs  Hello.imports  Hello.proj  build.bat
Samples/Weather/: Weather.hs  Weather.imports  Weather.proj
